# riksgransen-haskell

./: README.md  build.sh  run.sh
crapcademy/: ChangeLog.md  hint-test.cabal
crapcademy/frontend/: accumulators.html  beginner.html  datatypes.html  functions.html  listprocessing.html  login.html  patternmatching.html  typeclasses.html
crapcademy/src/: Controller.hs  Locking.hs  Solvers.hs  Storage.hs  Types.hs
haskell-teaching-tool/: ChangeLog.md  Dockerfile  README.md  haskell-teaching-tool.cabal
haskell-teaching-tool/frontend/: accumulators.html  beginner.html  common.js  datatypes.html  functions.html  listprocessing.html  login.html  patternmatching.html  problems.js  records.html  style.css  typeclasses.html
haskell-teaching-tool/src/: Controller.hs  Cookies.hs  Locking.hs  Main.hs  Page.hs  ProblemResp.hs  Solver.hs  Storage.hs  Types.hs
starter/: starter.cabal
starter/src/: Everything.hs  Main.hs
