name:                haskell-teaching-tool
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable haskell-teaching-tool
  main-is:             Main.hs
  other-modules:       Controller,
                       Locking,
                       Solvers,
                       Storage,
                       ProblemResp,
                       Types
  build-depends:       aeson,
                       async,
                       base,
                       blaze-html,
                       directory,
                       hashable,
                       hint,
                       http-api-data,
                       http-types,
                       list-t,
                       QuickCheck,
                       safe-exceptions,
                       servant,
                       servant-blaze,
                       servant-server,
                       stm,
                       stm-containers,
                       text,
                       uuid,
                       wai-cors,
                       warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O3 -threaded
