cabal-version:       2.4
name:                haskell-teaching-tool
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md

executable haskell-teaching-tool
  main-is:             Main.hs
  other-modules:       Controller,
                       Cookies
                       Locking,
                       Page,
                       ProblemResp,
                       Solver,
                       Storage,
                       Types
  build-depends:       aeson,
                       async,
                       base,
                       binary,
                       bytestring,
                       cookie,
                       blaze-html,
                       directory,
                       hashable,
                       hint,
                       http-api-data,
                       http-types,
                       list-t,
                       QuickCheck,
                       safe-exceptions,
                       servant,
                       servant-blaze,
                       servant-server,
                       stm,
                       stm-containers,
                       text,
                       time,
                       unliftio,
                       uuid,
                       wai-cors,
                       warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O3 -threaded
