name:                starter
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable starter
  main-is:             Main.hs

  build-depends:       aeson,
                       async,
                       base,
                       binary,
                       bytestring,
                       bytestring-mmap,
                       case-insensitive,
                       cereal,
                       conduit,
                       conduit-extra,
                       containers,
                       directory,
                       hashable,
                       http-client,
                       http-types,
                       list-t,
                       parsec,
                       scotty,
                       split,
                       stm,
                       stm-containers,
                       stringsearch,
                       tagsoup,
                       time,
                       text,
                       text-format,
                       unordered-containers,
                       vector,
                       vector-mmap,
                       xxhash,
                       zlib

  other-modules:       Everything
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O3 -threaded
